--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: bis620.2023
 Type: Package
-Title: Functions and Data for the BIS620 (2023) Class
+Title: Homework 3 for the BIS620 (2023) Class
 Version: 0.1.0
-Author: Michael J. Kane
-Maintainer: The package maintainer <michael.kane@yale.ediu>
-Description: Functions and data captured for class.
+Author: Julia Stiller and Anmol Seth
+Maintainer: The package maintainer <julia.stiller@yale.ediu>
+Description: Functions implemented in previous homework for class.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
