--- a/.github/workflows/r-test.yml
+++ b/.github/workflows/r-test.yml
@@ -37,6 +37,9 @@ jobs:
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
+      - name: Install XQuartz on macOS
+        if: runner.os == 'macOS'
+        run: brew install --cask xquartz
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
