--- a/.github/workflows/r-test.yml
+++ b/.github/workflows/r-test.yml
@@ -34,7 +34,7 @@ jobs:
           r-version: ${{ matrix.r-version }}
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
+          install.packages(c("remotes", "rcmdcheck", "shiny"))
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Install XQuartz on macOS
