--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,9 +32,17 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_log10)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
 importFrom(scales,wrap_format)
+importFrom(stats,na.omit)
+importFrom(tidyr,everything)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,data)
+
+importFrom(dplyr, left_join, collect)
+importFrom(tidyr, %>%)
