--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -11,11 +11,16 @@ on:
 
 jobs:
   test-coverage:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+      - name: Debug
+        run: |
+        echo "Working Directory: $PWD"
+        echo "Contents of the directory: $(ls -la)"
+        
       - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-r@v2
