--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
@@ -43,5 +44,4 @@ importFrom(stats,na.omit)
 importFrom(tidyr,everything)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,data)
-importFrom(utils,head)
-importFrom(dplyr, left_join, collect)
+importFrom("utils", "head", "write.csv")
