--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -53,4 +53,4 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
-          CODECOV_TOKEN: ${{ 1b350f70-8d08-45d2-8ad2-5c8774724b88 }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
