--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
@@ -54,4 +55,3 @@ importFrom(stats,na.omit)
 importFrom(tidyr,everything)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,data)
-importFrom("utils", "head", "write.csv")
